--- a/notebooks/recsys_hw_2_mrr.ipynb
+++ b/notebooks/recsys_hw_2_mrr.ipynb
@@ -1469,6 +1469,33 @@
     {
       "cell_type": "code",
       "source": [
+        "recs[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7fxqAfMvEPUM",
+        "outputId": "190c95c4-1a50-4978-a9ba-09768ffae2bd"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([16029,  2080, 16168, 13414, 12995, 10440, 11863, 16228,  8346,\n",
+              "        9728])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "target = df.values"
       ],
       "metadata": {
@@ -1502,6 +1529,24 @@
           "execution_count": 53
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "psge5FvOEA_W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#NAIVE"
+      ],
+      "metadata": {
+        "id": "1z1nXisuFcUN"
+      }
     },
     {
       "cell_type": "code",
@@ -1600,6 +1645,65 @@
           "execution_count": 58
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# без рандома\n",
+        "def naive_mrr_K_(target: np.ndarray, users: np.ndarray, recs: np.ndarray, K=10):\n",
+        "    \n",
+        "    recs = [x[:K] for x in recs]\n",
+        "    mrr = 0\n",
+        "    for i, user in enumerate(users):\n",
+        "        res = 0\n",
+        "        user_target = target[target[:, 0] == user][:, 1]\n",
+        "        for j, rec in enumerate(recs[i]):\n",
+        "            if rec in user_target:\n",
+        "                res = 1/(j+1)\n",
+        "                break\n",
+        "        mrr += res\n",
+        "    return mrr / len(users)"
+      ],
+      "metadata": {
+        "id": "PIPlyw1YEERm"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "naive_mrr_K_(target, users, recs, 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3P38hdrWEfd2",
+        "outputId": "89cab495-ee54-48c0-b7a1-bb77f0cc46ad"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.07372646825396835"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#NUMBA"
+      ],
+      "metadata": {
+        "id": "MWW6nbwDFgZs"
+      }
     },
     {
       "cell_type": "code",
@@ -1737,6 +1841,58 @@
           },
           "metadata": {},
           "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#без рандома\n",
+        "@nb.njit(cache=True, parallel=True)\n",
+        "def numba_mrr_K_(target: np.ndarray, recs: np.ndarray, K = 10):\n",
+        "    \n",
+        "    recs = [x[:K] for x in recs]\n",
+        "    mrr = np.zeros(len(users))\n",
+        "    for i in nb.prange(len(users)):\n",
+        "        user = users[i]\n",
+        "        p = 0\n",
+        "        user_target = target[target[:, 0] == user][:, 1]\n",
+        "        for j, rec in enumerate(recs[i]):\n",
+        "            if rec in user_target:\n",
+        "                p = 1/(j+1)\n",
+        "                break\n",
+        "        mrr[i] = p\n",
+        "    return mrr.mean()"
+      ],
+      "metadata": {
+        "id": "BKieo9CjFTsl"
+      },
+      "execution_count": 90,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numba_mrr_K_(target, recs, 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vJSkoF8jFU_L",
+        "outputId": "49ce8c85-a091-4028-85f6-9c61405ff62c"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.07372646825396817"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
         }
       ]
     },
