--- a/notebooks/recsys_hw_2_mrr.ipynb
+++ b/notebooks/recsys_hw_2_mrr.ipynb
@@ -1897,6 +1897,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#PANDAS\n"
+      ],
+      "metadata": {
+        "id": "WUGy4kKqGvzh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#без K\n",
