--- a/notebooks/recsys_hw_2_kfoldpout.ipynb
+++ b/notebooks/recsys_hw_2_kfoldpout.ipynb
@@ -1910,6 +1910,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# более правильный вариант\n",
+        "class UsersKFoldPOut1():\n",
+        "    def __init__(self, n_folds=3, user_column=Columns.User, p=2, random_seed=23):\n",
+        "        self.n_folds = n_folds\n",
+        "        self.user_column = user_column\n",
+        "        self.p = p\n",
+        "        self.random_seed = random_seed\n",
+        "    \n",
+        "    def split(self, df):\n",
+        "        users = df[self.user_column].unique()\n",
+        "        users_count = len(users)\n",
+        "        \n",
+        "        np.random.seed(self.random_seed)\n",
+        "        np.random.shuffle(users)\n",
+        "        like_rank = df.groupby(Columns.User).cumcount(ascending=False)\n",
+        "        \n",
+        "        fold_sizes = np.full(self.n_folds, users_count // self.n_folds, dtype=int)\n",
+        "        fold_sizes[: users_count % self.n_folds] += 1\n",
+        "        current = 0\n",
+        "        for fold_size in fold_sizes:\n",
+        "            start, stop = current, current + fold_size\n",
+        "            test_fold_users = users[start:stop]\n",
+        "            test_mask = df[self.user_column].isin(test_fold_users) & (like_rank < self.p)\n",
+        "            train_mask = ~df[self.user_column].isin(test_fold_users)\n",
+        "            \n",
+        "            yield train_mask, test_mask"
+      ],
+      "metadata": {
+        "id": "MgHrtK9sEIXM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cv = UsersKFoldPOut1(n_folds=3, p=3)\n",
+        "\n",
+        "for i, (train_mask, test_mask) in enumerate(cv.split(df)):\n",
+        "    train = df[train_mask]\n",
+        "    test = df[test_mask]\n",
+        "    print(f'Fold#{i} | Train: {train.shape[0]}, Test: {test.shape[0]}')"
+      ],
+      "metadata": {
+        "id": "Qtnyf3MHGsFP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
