--- a/HW_03/recsys_hw_3_knn.ipynb
+++ b/HW_03/recsys_hw_3_knn.ipynb
@@ -8201,39 +8201,40 @@
         "            \n",
         "                return recs\n",
         "            else:\n",
-        "                return pop_7.recommend(N)\n",
+        "                return list(pop_7.recommend(N))\n",
         "    else:\n",
-        "        return pop_7.recommend(N)"
+        "        return list(pop_7.recommend(N)"
       ],
       "metadata": {
         "id": "7d61FascIUnN"
       },
-      "execution_count": 49,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "get_rec(1000, knn_bm25, pop_7, users_list)"
+        "get_rec(1000000000000000000000, knn_bm25, pop_7, users_list)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cxsyj7fQMZbE",
-        "outputId": "a773aef5-4f92-4014-b8df-0c1030880eb1"
+        "outputId": "bb558964-7d3d-46d3-a8e0-1095f611f263"
       },
-      "execution_count": 48,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[23489, 74931, 143573, 153891, 209245, 336535, 463373, 532033, 558371, 574157]"
+              "array([ 9728, 15297, 10440, 14488, 13865, 12192,   341,  4151,  3734,\n",
+              "         512])"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 51
         }
       ]
     }
