--- a/notebooks/spring/HW3/BERT4Rec_and_SasRec.ipynb
+++ b/notebooks/spring/HW3/BERT4Rec_and_SasRec.ipynb
@@ -6141,7 +6141,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/pmixer/SASRec.pytorch.git\n",
+        "!git clone https://github.com/Tagirov0/SASRec.pytorch.git\n",
         "%cd /content/SASRec.pytorch"
       ],
       "metadata": {
@@ -6149,33 +6149,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DYZXhRsN9xAo",
-        "outputId": "f9390239-27cc-471c-fc6d-23a9acf67bfa"
+        "outputId": "c264a45a-7bfc-420b-aad5-b5be4931fb4d"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'SASRec.pytorch'...\n",
-            "remote: Enumerating objects: 80, done.\u001b[K\n",
-            "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (9/9), done.\u001b[K\n",
-            "remote: Total 80 (delta 25), reused 21 (delta 21), pack-reused 50\u001b[K\n",
-            "Unpacking objects: 100% (80/80), 17.96 MiB | 4.40 MiB/s, done.\n",
+            "remote: Enumerating objects: 83, done.\u001b[K\n",
+            "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Total 83 (delta 26), reused 21 (delta 21), pack-reused 50\u001b[K\n",
+            "Unpacking objects: 100% (83/83), 17.96 MiB | 5.16 MiB/s, done.\n",
             "/content/SASRec.pytorch\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Попробовал 2 версии SasRec на tf и pytorch, обе выдают нулевую точность, также пробовал получать рекомендации последовательно, но не помогло"
-      ],
-      "metadata": {
-        "id": "c4At5dbCJ2cp"
-      }
     },
     {
       "cell_type": "code",
@@ -11199,6 +11190,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Попробовал 2 версии SasRec на tf и pytorch, обе выдают нулевую точность, также пробовал получать рекомендации последовательно, но не помогло"
+      ],
+      "metadata": {
+        "id": "c4At5dbCJ2cp"
+      }
     },
     {
       "cell_type": "code",
